--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/part1"
+    "cmake.sourceDirectory": "${workspaceFolder}/part1",
+    "files.associations": {
+        "string.h": "c",
+        "elf64.h": "c"
+    }
 }
